# pa

./: Cargo.toml  pa.json
.github/workflows/: ci.yaml
src/: main.rs
