[package]
name = "pa-run"
version = "0.1.0"
edition = "2024"
authors = ["Koi to Coco<koitococ@outlook.com>"]
description = "Parallel job runner"
license = "MIT OR Apache-2.0"
repository = "https://github.com/koitococo/pa"

[[bin]]
name = "pa"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive", "env"] }
colored = "3.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yml = "0.0.12"
time = { version = "0.3.41", features = ["formatting", "local-offset", "macros"] }
tokio = { version = "1.44.2", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
tokio-util = "0.7.15"
toml = "0.8.22"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["signal"] }
